Fix NPE with ParkLoopUtil shutdown, fixing /creload